--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Custom CSS -->
     <link href="css/custom.css" rel="stylesheet">
     <!-- Favicon -->
-    <link rel="icon" href="">   
+    <link rel="icon" type="image/x-icon" href="imgs/favicon.ico">  
   </head>
 <body>
   
