--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>IslaTravel</title>
     <link rel="canonical" href=""> 
      <!-- Preload imgs -->
+    <link rel="preload" href="imgs/img_header_1.jpg" as="image">
     <link rel="preload" href="imgs/img_header_2.jpg" as="image">
     <link rel="preload" href="imgs/img_header_3.jpg" as="image">
-    <link rel="preload" href="imgs/img2_testim.jpg" as="image">
-    <link rel="preload" href="imgs/img3_testim.jpg" as="image">   
+    <link rel="preload" href="imgs/img_header_4.jpg" as="image">
+    <link rel="preload" href="imgs/img_header_5.jpg" as="image">
+    <link rel="preload" href="imgs/img_header_6.jpg" as="image"> 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Animate CSS--> 
