--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
               </div>
           
-            <div class="col-12 col-md-10 col-lg-8 m-0 p-0 mt-auto ms-auto"> 
+            <div class="col-12 col-md-10 col-lg-8 m-0 p-0 mt-2 mt-md-5 ms-auto"> 
                   <div class="header_gallery_cntrl col-12 align-items-center d-flex justify-content-center flex-row gap-2 p-0 mb-2">
                       <div id="header_gallery_cntrl_left" class="col-sm-6" data-allow-click="0">
                           <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-arrow-left-circle-fill shadow-sm" viewBox="0 0 16 16">
