--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
              
             <div id="header_gallery_imgs" class="col-12 col-md-10 col-lg-8 m-0 mt-auto  ms-auto">
               <div class="row align-items-center d-flex justify-content-center flex-row m-0 p-0 flex-wrap">
-                <div class="header_thumbs_imgs col-2 p-0" id="header_thumbs_img1"><img src="imgs/img_header_1_thumb.jpg" class="shadow-sm-white show_img" alt="" id="cover_img_1"></div>
-                <div class="header_thumbs_imgs col-2 p-0" id="header_thumbs_img2"><img src="imgs/img_header_2_thumb.jpg" class="shadow-sm-white hide_img" alt="" id="cover_img_2"></div>
-                <div class="header_thumbs_imgs col-2 p-0" id="header_thumbs_img3"><img src="imgs/img_header_3_thumb.jpg" class="shadow-sm-white hide_img" alt="" id="cover_img_3"></div>
-                <div class="header_thumbs_imgs col-2 p-0" id="header_thumbs_img4"><img src="imgs/img_header_4_thumb.jpg" class="shadow-sm-white show_img" alt="" id="cover_img_4"></div>
-                <div class="header_thumbs_imgs col-2 p-0" id="header_thumbs_img5"><img src="imgs/img_header_5_thumb.jpg" class="shadow-sm-white hide_img" alt="" id="cover_img_5"></div>
-                <div class="header_thumbs_imgs col-2 p-0" id="header_thumbs_img6"><img src="imgs/img_header_6_thumb.jpg" class="shadow-sm-white hide_img" alt="" id="cover_img_6"></div>
+                <div class="header_thumbs_imgs col-2 p-0" id="header_thumbs_img1"><div class="active"><img src="imgs/img_header_1_thumb.jpg" class="shadow-sm-white show_img" alt="" id="cover_img_1"></div></div>
+                <div class="header_thumbs_imgs col-2 p-0" id="header_thumbs_img2"><div><img src="imgs/img_header_2_thumb.jpg" class="shadow-sm-white hide_img" alt="" id="cover_img_2"></div></div>
+                <div class="header_thumbs_imgs col-2 p-0" id="header_thumbs_img3"><div><img src="imgs/img_header_3_thumb.jpg" class="shadow-sm-white hide_img" alt="" id="cover_img_3"></div></div>
+                <div class="header_thumbs_imgs col-2 p-0" id="header_thumbs_img4"><div><img src="imgs/img_header_4_thumb.jpg" class="shadow-sm-white hide_img" alt="" id="cover_img_4"></div></div>
+                <div class="header_thumbs_imgs col-2 p-0" id="header_thumbs_img5"><div><img src="imgs/img_header_5_thumb.jpg" class="shadow-sm-white hide_img" alt="" id="cover_img_5"></div></div>
+                <div class="header_thumbs_imgs col-2 p-0" id="header_thumbs_img6"><div><img src="imgs/img_header_6_thumb.jpg" class="shadow-sm-white hide_img" alt="" id="cover_img_6"></div></div>
               </div>
             </div>
         
@@ -357,8 +357,8 @@
       </div>     
     </div>
   </div>
-<div id="loader">
-    <div><span></span></div>
+<div id="loader" class="loading_container d-flex align-items-center justify-content-center">
+    <div class="loading"></div>
 </div> 
  <script src="js/bootstrap.bundle.min.js" ></script>
  <script src="josh/js/josh.min.js"></script>
